add missing bits